--- a/docstrings/numerical_simulation/environment_setup/aerodynamic_coefficients.yaml
+++ b/docstrings/numerical_simulation/environment_setup/aerodynamic_coefficients.yaml
@@ -1,17 +1,40 @@
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-################## Aerodynamic Coefficient Setup ( createAerodynamicCoefficientInterface.h) #########################
-# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+#########################################################################
+#    ███    ███  ██████  ██████  ██    ██ ██      ███████
+#    ████  ████ ██    ██ ██   ██ ██    ██ ██      ██
+#    ██ ████ ██ ██    ██ ██   ██ ██    ██ ██      █████
+#    ██  ██  ██ ██    ██ ██   ██ ██    ██ ██      ██
+#    ██      ██  ██████  ██████   ██████  ███████ ███████
+#########################################################################
+# Aerodynamic Coefficient Setup ( createAerodynamicCoefficientInterface.h)
 
 
-###### enums
+extended_summary: |
+  This module contains the factory functions for setting up the
+  aerodynamic interface of artificial and celestial bodies in an environment.
+
+#########################################################################
+#  ███████ ███   ██ ██    ██ ███    ███  ██████
+#  ██      ████  ██ ██    ██ ████  ████ █
+#  █████   ██ ██ ██ ██    ██ ██ ████ ██  █████
+#  ██      ██  ████ ██    ██ ██  ██  ██       █
+#  ███████ ██    ██  ██████  ██      ██ ██████
+#########################################################################
 
   # no enums
 
-######
 
+
+#########################################################################
+#   ██████ ██          ██      ██████  ██████ ███████  ██████
+#  ██      ██         ████    █       █       ██      █
+#  ██      ██        ██  ██    █████   █████  █████    █████
+#  ██      ██       ████████        █       █ ██            █
+#   ██████ ███████ ██      ██ ██████  ██████  ███████ ██████
+#########################################################################
 
 classes:
-
+  # base class:
+  #######################################################################
 
   - name: AerodynamicCoefficientSettings
     short_summary: "Base class for providing settings for aerodynamic interface model."
@@ -30,6 +53,8 @@ classes:
 
 
   # derived classes:
+  #######################################################################
+
   - name: ConstantAerodynamicCoefficientSettings
     short_summary: "Class for defining model settings from constant aerodynamic coefficients."
     extended_summary: "`AerodynamicCoefficientSettings` derived class for aerodynamic interface model settings using only constant aerodynamic coefficients."
@@ -46,10 +71,17 @@ classes:
       #        extended_summary: "Instances of the `ScaledEphemerisSettings` class should be created through the `scaled` factory functions." # [py]
 
 
+##############################################################################
+#  ███████ ██    ██ ███    ██  ██████ ████████ ██  ██████  ███    ██  ██████
+#  ██      ██    ██ ████   ██ ██         ██    ██ ██    ██ ████   ██ █
+#  █████   ██    ██ ██ ██  ██ ██         ██    ██ ██    ██ ██ ██  ██  █████
+#  ██      ██    ██ ██  ██ ██ ██         ██    ██ ██    ██ ██  ██ ██       █
+#  ██       ██████  ██   ████  ██████    ██    ██  ██████  ██   ████ ██████
+##############################################################################
+
 functions:
-
-
   # factory functions:
+  #######################################################################
 
   - name: constant # [py]
   - name: constantAerodynamicCoefficientSettings # [cpp]
@@ -57,7 +89,6 @@ functions:
     extended_summary: |
       Factory function for settings object, defining aerodynamic interface model entirely from constant aerodynamic coefficients,
       i.e. coefficients are not a function of any independent variables.
-      This function creates an instance of an `AerodynamicCoefficientSettings` derived `ConstantAerodynamicCoefficientSettings` object.
 
     parameters:
       - name: reference_area # [py]
@@ -80,7 +111,6 @@ functions:
           Boolean to define whether the aerodynamic coefficients are defined in the aerodynamic frame
           (drag, side, lift force) or in the body frame (typically denoted as Cx, Cy, Cz).
 
-
       - name: are_coefficients_in_negative_axis_direction # [py]
         type: bool, default = true # [py]
         description: | # [py]
@@ -92,11 +122,38 @@ functions:
         description: "Boolean to define whether the aerodynamic coefficients are positive along the positive axes of the body or aerodynamic frame (see arg areCoefficientsInAerodynamicFrame). Note that for drag, side and lift force, the coefficients are typically defined in negative direction." # [cpp]
 
     returns:
-        type: ConstantAerodynamicCoefficientSettings  # [py]
-        description: Instance of ConstantAerodynamicCoefficientSettings class. # [py]
-        type: ConstantAerodynamicCoefficientSettings  # [cpp]
-        description: # [cpp]
+        type: ConstantAerodynamicCoefficientSettings
+        description: Instance of the :class:`~tudatpy.numerical_simulation.environment_setup.aerodynamic_coefficients.AerodynamicCoefficientSettings` derived :class:`~tudatpy.numerical_simulation.environment_setup.aerodynamic_coefficients.ConstantAerodynamicCoefficientSettings` class
 
+    examples: |
+      In this example, we create :class:`~tudatpy.numerical_simulation.environment_setup.aerodynamic_coefficients.AerodynamicCoefficientSettings` for the artifical body "Spacecraft", using only constant aerodynamic coefficients:
+
+      .. code-block:: python # [py]
+         # [py]
+         # define parameters of constant aerodynamic coefficient model  # [py]
+         reference_area = 20.0  # [py]
+         drag_coefficient = 1.5  # [py]
+         lift_coefficient = 0.3  # [py]
+         # create aerodynamic interface settings
+         aero_coefficient_settings = environment_setup.aerodynamic_coefficients.constant(
+             reference_area, [ drag_coefficient, 0, lift_coefficient ] )
+         # assign aerodynamic interface to "Spacecraft" vehicle
+         environment_setup.add_aerodynamic_coefficient_interface(
+                     bodies, "Spacecraft", aero_coefficient_settings )
+
+      .. code-block:: cpp # [cpp]
+         # [cpp]
+         // define parameters of constant aerodynamic coefficient model # [cpp]
+         double referenceArea = 20.0; # [cpp]
+         Eigen::Vector3d constantCoefficients; # [cpp]
+         constantCoefficients( 0 ) = 1.5; # [cpp]
+         constantCoefficients( 2 ) = 0.3; # [cpp]
+         // create aerodynamic interface and assign to "Spacecraft" vehicle # [cpp]
+         bodySettings[ "Spacecraft" ]->aerodynamicCoefficientSettings = std::make_shared< ConstantAerodynamicCoefficientSettings >( # [cpp]
+         referenceArea, constantCoefficients, true, true ); # [cpp]
+
+  #######################################################################
+  # (%!) not on tudat-space
 
   - name: custom # [py]
   - name: customAerodynamicCoefficientSettings # [cpp]
@@ -104,7 +161,6 @@ functions:
     extended_summary: |
       Factory function for settings object, defining aerodynamic interface model via a custom force coefficient function
       (function of independent variable).
-      This function creates an instance of an `AerodynamicCoefficientSettings` derived `CustomAerodynamicCoefficientSettings` object.
 
     parameters:
       - name: force_coefficient_function # [py]
@@ -145,12 +201,12 @@ functions:
           Note that for drag, side and lift force, the coefficients are typically defined in negative direction.
 
     returns:
-        type: CustomAerodynamicCoefficientSettings  # [py]
-        description: Instance of CustomAerodynamicCoefficientSettings class. # [py]
-        type: CustomAerodynamicCoefficientSettings  # [cpp]
-        description: # [cpp]
+        type: CustomAerodynamicCoefficientSettings
+        description: Instance of the :class:`~tudatpy.numerical_simulation.environment_setup.aerodynamic_coefficients.AerodynamicCoefficientSettings` derived :class:`~tudatpy.numerical_simulation.environment_setup.aerodynamic_coefficients.CustomAerodynamicCoefficientSettings` class
 
 
+  #######################################################################
+  # (%!) no example on tudat-space
 
   - name: tabulated_one_dimensional # [py]
   - name: oneDimensionalTabulatedAerodynamicCoefficientSettings # [cpp]
@@ -158,7 +214,6 @@ functions:
     extended_summary: |
       Factory function for settings object, defining aerodynamic interface model via user-defined, 1-dimensional, tabulated aerodynamic force and moment coefficients
       (tabulated w.r.t. independent variable).
-      This function creates an instance of an `AerodynamicCoefficientSettings` derived `TabulatedAerodynamicCoefficientSettings` object (via `TabulatedAerodynamicCoefficientSettingsBase` class).
 
     parameters:
 
@@ -238,11 +293,12 @@ functions:
 
 
     returns:
-        type: TabulatedAerodynamicCoefficientSettings  # [py]
-        description: Instance of CustomAerodynamicCoefficientSettings class. # [py]
-        type: TabulatedAerodynamicCoefficientSettings  # [cpp]
-        description: # [cpp]
+        type: TabulatedAerodynamicCoefficientSettings
+        description: Instance of the :class:`~tudatpy.numerical_simulation.environment_setup.aerodynamic_coefficients.AerodynamicCoefficientSettings` derived :class:`~tudatpy.numerical_simulation.environment_setup.aerodynamic_coefficients.TabulatedAerodynamicCoefficientSettings` class (via :class:`~tudatpy.numerical_simulation.environment_setup.aerodynamic_coefficients.TabulatedAerodynamicCoefficientSettingsBase` class)
 
+
+  #######################################################################
+  # (%!) not on tudat-space
 
   - name: tabulated_force_only # [py]
   - name: oneDimensionalTabulatedAerodynamicCoefficientSettings # [cpp]
@@ -250,7 +306,6 @@ functions:
     extended_summary: |
       Factory function for settings object, defining aerodynamic interface model via user-defined, 1-dimensional, tabulated aerodynamic force coefficients
       (tabulated w.r.t. independent variable).
-      This function creates an instance of an `AerodynamicCoefficientSettings` derived `TabulatedAerodynamicCoefficientSettings` object (via `TabulatedAerodynamicCoefficientSettingsBase` class).
 
     parameters:
 
@@ -307,20 +362,20 @@ functions:
 
     returns:
         type: TabulatedAerodynamicCoefficientSettings  # [py]
-        description: Instance of TabulatedAerodynamicCoefficientSettings class. # [py]
-        type: TabulatedAerodynamicCoefficientSettings  # [cpp]
-        description: # [cpp]
+        description: Instance of the :class:`~tudatpy.numerical_simulation.environment_setup.aerodynamic_coefficients.AerodynamicCoefficientSettings` derived :class:`~tudatpy.numerical_simulation.environment_setup.aerodynamic_coefficients.TabulatedAerodynamicCoefficientSettings` class
 
+
+  #######################################################################
+  # (%!) not on tudat-space
 
   - name: scaled_by_constant # [py]
   - name: scaledAerodynamicCoefficientSettings # [cpp]
     short_summary: "Factory function for creating aerodynamic interface model settings by applying one constant scaling factor/value to all coefficients of an existing model settings object."
     extended_summary: |
       Factory function for settings object, defining aerodynamic interface based on scaling the coefficients of an existing model settings object by one constant factor or value.
-      Via the `is_scaling_absolute` # [py]
-      Via the `isScalingAbsolute` # [cpp]
+      Via the ``is_scaling_absolute`` # [py]
+      Via the ``isScalingAbsolute`` # [cpp]
       boolean, the user can apply a constant scaling factor or an absolute value to the resulting force and moment coefficients (for instance for an uncertainty analysis).
-      This function creates an instance of an `AerodynamicCoefficientSettings` derived `ScaledAerodynamicCoefficientInterfaceSettings` object.
 
     parameters:
 
@@ -352,18 +407,19 @@ functions:
           instead of the default behaviour of multiplying the base value by the scaling factor.
 
     returns:
-        type: ScaledAerodynamicCoefficientInterfaceSettings  # [py]
-        description: Instance of ScaledAerodynamicCoefficientInterfaceSettings. # [py]
-        type: ScaledAerodynamicCoefficientInterfaceSettings  # [cpp]
-        description: # [cpp]
+        type: ScaledAerodynamicCoefficientInterfaceSettings
+        description: Instance of the :class:`~tudatpy.numerical_simulation.environment_setup.aerodynamic_coefficients.AerodynamicCoefficientSettings` derived :class:`~tudatpy.numerical_simulation.environment_setup.aerodynamic_coefficients.ScaledAerodynamicCoefficientInterfaceSettings` class
 
+
+  #######################################################################
+  # (%!) not on tudat-space
 
   - name: scaled_by_vector # [py]
     short_summary: "Factory function for creating aerodynamic interface model settings by applying constant scaling factors/values to the coefficients of an existing model settings object." # [py]
     extended_summary: | # [py]
       Factory function for settings object, defining aerodynamic interface based on scaling the coefficients of an existing model settings object by constant factors or values.
-      Via the `is_scaling_absolute` boolean, the user can apply one constant scaling factor or an absolute value to each resulting force and moment coefficient (for instance for an uncertainty analysis).
-      This function creates an instance of an `AerodynamicCoefficientSettings` derived `ScaledAerodynamicCoefficientInterfaceSettings` object.
+      Via the ``is_scaling_absolute`` boolean, the user can apply one constant scaling factor or an absolute value to each resulting force and moment coefficient (for instance for an uncertainty analysis).
+
   - name: scaledAerodynamicCoefficientSettings # [cpp]
     short_summary: "Factory function for creating aerodynamic interface model settings by applying constant scaling factors/values to the coefficients of an existing model settings object." # [cpp]
     extended_summary: "Factory function for settings object, defining aerodynamic interface based on scaling the coefficients of an existing model settings object by constant factors or values. Via the `isScalingAbsolute` boolean, the user can apply one constant scaling factor or an absolute value to each resulting force and moment coefficient (for instance for an uncertainty analysis). This function creates an instance of an `AerodynamicCoefficientSettings` derived `ScaledAerodynamicCoefficientInterfaceSettings` object." # [cpp]
@@ -397,25 +453,23 @@ functions:
           Setting this boolean to true will add the scaling value to the base value,
           instead of the default behaviour of multiplying the base value by the scaling factor.
 
-
     returns:
-        type: ScaledAerodynamicCoefficientInterfaceSettings  # [py]
-        description: Instance of ScaledAerodynamicCoefficientInterfaceSettings. # [py]
-        type: ScaledAerodynamicCoefficientInterfaceSettings  # [cpp]
-        description: # [cpp]
+        type: ScaledAerodynamicCoefficientInterfaceSettings
+        description: Instance of the :class:`~tudatpy.numerical_simulation.environment_setup.aerodynamic_coefficients.AerodynamicCoefficientSettings` derived :class:`~tudatpy.numerical_simulation.environment_setup.aerodynamic_coefficients.ScaledAerodynamicCoefficientInterfaceSettings` class
 
+
+  #######################################################################
+  # (%!) not on tudat-space
 
   - name: scaled_by_vector_function # [py]
     short_summary: "Factory function for creating aerodynamic interface model settings by applying custom scaling factors/values to the coefficients of an existing model settings object." # [py]
     extended_summary: |  # [py]
       Factory function for settings object, defining aerodynamic interface based on scaling the coefficients of an existing model settings object by custom factors or values.
-      Via the `is_scaling_absolute` boolean, the user can apply the scaling factors or absolute values to each resulting force and moment coefficient (for instance for an uncertainty analysis).
-      This function creates an instance of an `AerodynamicCoefficientSettings` derived `ScaledAerodynamicCoefficientInterfaceSettings` object.
+      Via the ``is_scaling_absolute`` boolean, the user can apply the scaling factors or absolute values to each resulting force and moment coefficient (for instance for an uncertainty analysis).
 
   - name: scaledAerodynamicCoefficientSettings # [cpp]
       short_summary: "Factory function for creating aerodynamic interface model settings by applying custom scaling factors/values to the coefficients of an existing model settings object." # [cpp]
       extended_summary: "Factory function for settings object, defining aerodynamic interface based on scaling the coefficients of an existing model settings object by custom factors or values. Via the `isScalingAbsolute` boolean, the user can apply the scaling factors or absolute values to each resulting force and moment coefficient (for instance for an uncertainty analysis). This function creates an instance of an `AerodynamicCoefficientSettings` derived `ScaledAerodynamicCoefficientInterfaceSettings` object." # [cpp]
-
 
     parameters:
 
@@ -446,10 +500,12 @@ functions:
           Setting this boolean to true will add the scaling value to the base value,
           instead of the default behaviour of multiplying the base value by the scaling factor.
 
-
     returns:
-        type: ScaledAerodynamicCoefficientInterfaceSettings  # [py]
-        description: Instance of ScaledAerodynamicCoefficientInterfaceSettings. # [py]
-        type: ScaledAerodynamicCoefficientInterfaceSettings  # [cpp]
-        description: # [cpp]
+        type: ScaledAerodynamicCoefficientInterfaceSettings
+        description: Instance of the :class:`~tudatpy.numerical_simulation.environment_setup.aerodynamic_coefficients.AerodynamicCoefficientSettings` derived :class:`~tudatpy.numerical_simulation.environment_setup.aerodynamic_coefficients.ScaledAerodynamicCoefficientInterfaceSettings` class
+
+
+  #######################################################################
+  # missing (w.r.t) tudat-space:
+  #     - Local Inclination Methods
 
