--- a/docstrings/numerical_simulation/environment_setup/aerodynamic_coefficients.yaml
+++ b/docstrings/numerical_simulation/environment_setup/aerodynamic_coefficients.yaml
@@ -208,7 +208,7 @@ functions:
   #######################################################################
   # (%!) no example on tudat-space
 
-  - name: tabulated_one_dimensional # [py]
+  - name: tabulated # [py]
   - name: oneDimensionalTabulatedAerodynamicCoefficientSettings # [cpp]
     short_summary: "Factory function for creating aerodynamic interface model settings from user-defined, 1-d tabulated coefficients."
     extended_summary: |
